persist订阅message,signup_email,view_page三个topic

--- a/apps/persist/persist.toml
+++ b/apps/persist/persist.toml
@@ -1,8 +1,10 @@
-Topic = "message"
+Topics = ["message","view_page","signup_email"]
 Channel = "persist"
 LookupdHTTPAddrs = []
 NsqdTCPAddrs = ["127.0.0.1:4150"]
 MaxInFlight = 200
+SendCloudApiUser = ""
+SendCloudApiKey = ""
 
 [MysqlConfigs]
     [MysqlConfigs.write]
