整理队列的topic
共有topic如下：
send_email 发送邮件的
message 消息的，包括文本／文件／图片对话消息，请求对话，加入对话
track 访客访问
timeout 超时，这个暂时还没有具体的处理

--- a/apps/persist/persist.toml
+++ b/apps/persist/persist.toml
@@ -1,4 +1,4 @@
-Topics = ["message","view_page","signup_email"]
+Topics = ["message","track","send_email"]
 Channel = "persist"
 LookupdHTTPAddrs = []
 NsqdTCPAddrs = ["127.0.0.1:4150"]
